# docs/swagger.json
@@ -116,7 +116,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetByIdd",
+                        "description": "Error while GetById",
                         "schema": {
                             "type": "string"
                         }
@@ -140,11 +140,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "biography",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "name",
                         "in": "query"
                     }
@@ -157,7 +152,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetAlld",
+                        "description": "Error while GetAll",
                         "schema": {
                             "type": "string"
                         }
@@ -205,6 +200,44 @@
                     },
                     "401": {
                         "description": "Error while updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/author/{id}/books": {
+            "get": {
+                "description": "GetAll page",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Author"
+                ],
+                "summary": "GetAll Author",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Author ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "GetAll Successful",
+                        "schema": {
+                            "$ref": "#/definitions/genprotos.AllBooks"
+                        }
+                    },
+                    "401": {
+                        "description": "Error while GetAll",
                         "schema": {
                             "type": "string"
                         }
@@ -320,7 +353,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetByIdd",
+                        "description": "Error while GetById",
                         "schema": {
                             "type": "string"
                         }
@@ -344,17 +377,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "author_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "genre_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "summary",
+                        "name": "authorName",
                         "in": "query"
                     },
                     {
@@ -371,7 +394,36 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetAlld",
+                        "description": "Error while GetAll",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/book/overdue": {
+            "get": {
+                "description": "Overdue page",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Overdue Book",
+                "responses": {
+                    "200": {
+                        "description": "Overdue Successful",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Error while Overdue",
                         "schema": {
                             "type": "string"
                         }
@@ -534,7 +586,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetByIdd",
+                        "description": "Error while GetById",
                         "schema": {
                             "type": "string"
                         }
@@ -555,6 +607,18 @@
                     "Borrower"
                 ],
                 "summary": "GetAll Borrower",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "borrow_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "return_date",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "GetAll Successful",
@@ -563,7 +627,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetAlld",
+                        "description": "Error while GetAll",
                         "schema": {
                             "type": "string"
                         }
@@ -726,7 +790,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetByIdd",
+                        "description": "Error while GetById",
                         "schema": {
                             "type": "string"
                         }
@@ -750,11 +814,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "name",
                         "in": "query"
                     }
@@ -767,7 +826,7 @@
                         }
                     },
                     "401": {
-                        "description": "Error while GetAlld",
+                        "description": "Error while GetAll",
                         "schema": {
                             "type": "string"
                         }
@@ -815,6 +874,44 @@
                     },
                     "401": {
                         "description": "Error while updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/genre/{id}/books": {
+            "get": {
+                "description": "GetAll page",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Genre"
+                ],
+                "summary": "GetAll Genre",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Genre ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "GetAll Successful",
+                        "schema": {
+                            "$ref": "#/definitions/genprotos.AllBooks"
+                        }
+                    },
+                    "401": {
+                        "description": "Error while GetAll",
                         "schema": {
                             "type": "string"
                         }
